--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 @import "_globals";
 
-@font-face {
-  font-family: "Plus Jakarta Sans";
-  src: url("/assets/fonts/PlusJakartaSans-VariableFont_wght.ttf");
-}
+// @font-face {
+//   font-family: "Plus Jakarta Sans";
+//   src: url("/assets/fonts/PlusJakartaSans-VariableFont_wght.ttf");
+// }
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
